--- a/public/index.html
+++ b/public/index.html
@@ -4,36 +4,23 @@
 
 	<head>
 		<title>Clementine.js - The elegant and lightweight full stack JavaScript boilerplate.</title>
-		
+
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 	</head>
 
-	<header>
-		<p>Welcome, <span id="display-name"></span>!</p>
-		<a class="menu" href="/profile">Profile</a>
-		<p>|</p>
-		<a class="menu" href="/logout">Logout</a>
-	</header>
-
 	<body>
-		<div class="container">
-			<img src="/public/img/clementine_150.png" />
-			<br />
-			<p class="clementine-text">Clementine.js</p>
-		</div>
-	
-		<div class="container">
-			<p>You have clicked the button <span id="click-nbr"></span> times.</p>
-			<br />
-			<div class="btn-container">
-				<button type="submit" class="btn btn-add">CLICK ME!</button>
-				<button class="btn btn-delete">RESET</button>
+			<div class="clementine-text">API Basejump: Timestamp microservice </div>
+			<div class="card mid-size center">
+				<h3>Example usage:</h3><br>
+				https://timestamp-ms.herokuapp.com/December%2015,%202015<br>
+				https://timestamp-ms.herokuapp.com/1450137600<br>
+				<h3>Example output:</h3><br>
+				{ "unix": 1450137600, "natural": "December 15, 2015" }
 			</div>
-		</div>
-		
-		<script type="text/javascript" src="common/ajax-functions.js"></script>
+
+		<!-- <script type="text/javascript" src="common/ajax-functions.js"></script>
 		<script type="text/javascript" src="controllers/clickController.client.js"></script>
-		<script type="text/javascript" src="controllers/userController.client.js"></script>
+		<script type="text/javascript" src="controllers/userController.client.js"></script> -->
 	</body>
 
 </html>
