--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,12 @@
 			<div class="clementine-text">API Basejump: Timestamp microservice </div>
 			<div class="card mid-size center">
 				<h3>Example usage:</h3><br>
-				https://fcctime.herokuapp.com/December%2015,%202015<br>
-				https://fcctime.herokuapp.com/1450137600<br>
+				<a href="https://fcctime.herokuapp.com/December%2015,%202015">
+					https://fcctime.herokuapp.com/December%2015,%202015
+				</a><br>
+				<a href="https://fcctime.herokuapp.com/1450137600">
+					https://fcctime.herokuapp.com/1450137600
+				</a><br>
 				<h3>Example output:</h3><br>
 				{ "unix": 1450137600, "natural": "December 15, 2015" }
 			</div>
